[package]
name = "hraw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
thiserror = "1.0.58"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

num = "0.4.1"
# nom = "7.1.3"
image = "0.24.9"
rayon = "1.9.0"
nalgebra = "0.32.4"
byteorder = "1.5.0"

zip = "0.6.6" # 
paste = "1.0.14"
