[package]
name = "hraw"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
experimental = []
open-cv = ["opencv"]

[dependencies]
anyhow = "1.0.81"
thiserror = "1.0.58"
paste = "1.0.14"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

zip = "0.6.6"

num = "0.4.1"
# nom = "7.1.3"
image = "0.24.9"
rayon = "1.9.0"
nalgebra = "0.32.4"
simba = "*"
byteorder = "1.5.0"

opencv = { optional = true, version ="0.89.0" }

tempfile = "3.5.0"
mlua = { version = "0.9.1", features = ["luau-jit"] }
pyo3 = { version = "*", features = ["auto-initialize"] }
numpy = "*"
indoc = "2"

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive"] }

