[package]
name = "hraw"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hraw"
path = "src/lib.rs"

[[bin]]
name = "hraw"
path = "src/main.rs"
required-features = ["app"]

[features]
default = []
pixel = ["simba"]
experimental = []
open-cv = ["opencv"]
app = ["clap", "colored"]

[dependencies]
anyhow = "1.0.81"
thiserror = "1.0.58"
paste = "1.0.14"
indoc = "2"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

zip = "0.6.6"
walkdir = "2.5.0"

# num-traits = "0.2.19"
num = "0.4.1"            # num::clamp, .is_even...
# nom = "7.1.3"
image = "0.24.9"
rayon = "1.9.0"
nalgebra = "0.32.4"
byteorder = "1.5.0"

tempfile = "3.5.0"
mlua = { version = "0.9.9", features = ["luau-jit", "serialize", "async"] } # luajitの時はvendored必要
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
numpy = "0.21.0"
extism = "1.4.1"

# futures = "*"
# tokio = { version = "*", features = ["full"] }

# ---features : pixel---
simba = { optional = true, version ="*" }

# ---features : open-cv---
opencv = { optional = true, version ="0.89.0" }

# ---features : app---
clap = { version = "4.5.1", features = ["derive"], optional = true }
colored = { version = "2.1.0", optional = true }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive"] }
criterion = "0.5.1"


[[example]]
name = "hraw"
required-features = []

[[example]]
name = "modify"
required-features = ["pixel"]


[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "benchmark_lua"
harness = false

[[bench]]
name = "benchmark_py"
harness = false
